--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Form</title>
         <link rel="stylesheet" href="style.css" />
+
     </head>
     <body>
         <h1>Galvanize Personnel</h1>
-        <!-- Your code goes here -->
+        <form>
+            <label for="first_name">First Name:</label>
+            <input type="text" id="first_name" name="first_name">
+            <label for="last_name">Last Name:</label>
+            <input type="text" id="last_name" name="last_name">
+            <label for="drop">Role:</label>
+            <select id="drop" name="drop">
+                <option selected>Select an Option Here</option>  
+            </select>
+            <img src="assets/placeholder.jpg">
+            <button type="submit" class="save">Save</button>
+            <p class="message"></p>
+        </form>
         <script src="app.js"></script>
     </body>
 </html>
